--- a/BANHANG/BANHANG.HTMLClient/default-1.0.1.htm
+++ b/BANHANG/BANHANG.HTMLClient/default-1.0.1.htm
@@ -6,10 +6,6 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="msapplication-TileImage" content="Content/Images/user-logo-144.png" />
-    <meta name="msapplication-TileColor" content="#0072c6" />
-    <link rel="icon" href="Content/Images/user-logo.ico" type="image/x-icon" />
-    
     <title>AppTitle</title>
 
     <script type="text/javascript">
@@ -19,13 +15,13 @@
         }
     </script>
 
-    <!-- Change light-theme-2.5.2.css and msls-light-2.5.2.css to dark-theme-2.5.2.css and msls-dark-2.5.2.css respectively to use the 
-         dark theme.  Alternatively, you may replace light-theme-2.5.2.css with a custom jQuery Mobile theme. -->
-    <link rel="stylesheet" type="text/css" href="Content/light-theme-2.5.2.css" />
-    <link rel="stylesheet" type="text/css" href="Content/msls-light-2.5.2.css" />
+    <!-- Change light-theme.css and msls-light.css to dark-theme.css and msls-dark.css respectively to use the 
+         dark theme.  Alternatively, you may replace light-theme.css with a custom jQuery Mobile theme. -->
+    <link rel="stylesheet" type="text/css" href="Content/light-theme-1.0.1.css" />
+    <link rel="stylesheet" type="text/css" href="Content/msls-light-1.0.1.css" />
 
     <link rel="stylesheet" type="text/css" href="Content/jquery.mobile.structure-1.3.2.min.css" />
-    <link rel="stylesheet" type="text/css" href="Content/msls-2.5.2.min.css" />
+    <link rel="stylesheet" type="text/css" href="Content/msls-1.0.1.min.css" />
 
     <!-- Wijmo Widgets CSS -->
     <link rel="stylesheet" type="text/css" href="Content/jquery.wijmo-pro.all.3.20142.48.min.css" />
@@ -46,16 +42,15 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.0/1/MicrosoftAjax.js"></script>
     <script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/globalize/0.1.1/globalize.min.js"></script>
     <script type="text/javascript" src="Scripts/winjs-1.0.min.js"></script>
     <script type="text/javascript" src="Scripts/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="Scripts/jquery.mobile-1.3.2.min.js"></script>
-    <script type="text/javascript" src="Scripts/datajs-1.1.1.min.js"></script>
+    <script type="text/javascript" src="Scripts/datajs-1.1.0.min.js"></script>
     <script type="text/javascript" src="Scripts/Generated/resources.js"></script>
-    <script type="text/javascript" src="Scripts/msls-2.5.2.min.js"></script>
+    <script type="text/javascript" src="Scripts/msls-1.0.1.min.js"></script>
 
-    <!--Wijmo Widgets JavaScript-->
+    <!-- Wijmo Widgets JavaScript -->
     <script type="text/javascript" src="Scripts/amplify.min.js"></script>
     <script type="text/javascript" src="Scripts/jquery.wijmo-open.all.3.20142.48.min.js"></script>
     <script type="text/javascript" src="Scripts/jquery.wijmo-pro.all.3.20142.48.min.js"></script>
