--- a/BANHANG/BANHANG.HTMLClient/default.htm
+++ b/BANHANG/BANHANG.HTMLClient/default.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" type="text/css" href="Content/jquery.mobile.structure-1.3.2.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/msls-2.5.2.min.css" />
-    <link rel="stylesheet" type="text/css" href="Content/lsWires.css" />
+
     <!-- Wijmo Widgets CSS -->
     <link rel="stylesheet" type="text/css" href="Content/jquery.wijmo-pro.all.3.20142.48.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/c1ls-light-4.0.20143.39.css" />
@@ -67,8 +67,6 @@
     <script type="text/javascript" src="Scripts/d3ls-4.0.20143.39.js"></script>
 
     <script type="text/javascript" src="Scripts/Generated/generatedAssets.js"></script>
-    <script type="text/javascript" src="Scripts/IsWires.js"></script>
-    <script type="text/javascript" src="Scripts/lodash.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             msls._run()
