--- a/BANHANG/BANHANG.HTMLClient/default.htm
+++ b/BANHANG/BANHANG.HTMLClient/default.htm
@@ -26,7 +26,7 @@
 
     <link rel="stylesheet" type="text/css" href="Content/jquery.mobile.structure-1.3.0.min.css" />
     <link rel="stylesheet" type="text/css" href="Content/msls-2.5.2.min.css" />
-
+    <link rel="stylesheet" type="text/css" href="Content/lsWires.css" />
     <!-- Default font, header, and icon styles can be overriden in user-customization.css -->
     <link rel="stylesheet" type="text/css" href="Content/user-customization.css"/>
 </head>
@@ -48,6 +48,8 @@
     <script type="text/javascript" src="Scripts/Generated/resources.js"></script>
     <script type="text/javascript" src="Scripts/msls-2.5.2.min.js"></script>
     <script type="text/javascript" src="Scripts/Generated/generatedAssets.js"></script>
+    <script type="text/javascript" src="Scripts/IsWires.js"></script>
+    <script type="text/javascript" src="Scripts/lodash.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             msls._run()
